# AutoAPE-da

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  build-da.sh  da.sh  pyproject.toml  requirements.txt  setup.py
conf/: da-conf.xml
dataanalyzer/: DataAnalyzer.py  DataAnalyzerChief.py  DataAnalyzerWorker.py  __init__.py
dataanalyzer/analyzer/: Analyzer.py  DatasetMeta.py  DatasetMetaAbstract.py  ImageDatasetMetaChief.py  ImageDatasetMetaWorker.py  TableDatasetMeta.py  TableDatasetMetaChief.py  TableDatasetMetaWorker.py
dataanalyzer/analyzer/dataset/: DatasetMeta.py  DatasetMetaFeatureAbstract.py
dataanalyzer/analyzer/image/: ImageShape.py  __init__.py
dataanalyzer/analyzer/table/: Analyzer.py
dataanalyzer/common/: Common.py  Constants.py
dataanalyzer/core/: DataAnalyzerChief.py  DataAnalyzerWorker.py
dataanalyzer/core/analyzer/: DatasetMetaAbstract.py  ImageDatasetMetaChief.py  ImageDatasetMetaWorker.py  TableDatasetMetaChief.py  TableDatasetMetaWorker.py
dataanalyzer/core/dataloader/: DataLoader.py  (+5 more)
dataanalyzer/dataloader/: DataDistributor.py  DataLoader.py  DataLoaderFactory.py  DataLoaderImage.py  DataLoaderImageWorker.py  DataLoaderTable.py  DataLoaderTableWorker.py
dataanalyzer/info/: DAJobInfo.py  JobInfo.py
dataanalyzer/manager/: DataAnalyzerChiefManager.py  DataAnalyzerManager.py  DataAnalyzerWorkerManager.py  SFTPClientManager.py
dataanalyzer/util/: ConfigUtils.py  FileUtils.py  JSONUtils.py  Singleton.py
src/: setup.py
src/apeda/: DataAnalyzerChief.py
src/dataanalyzer/: DataAnalyzer.py
(+41 files in other folders)
