[tool.poetry]
name = "dataanalyzer"
version = "4.0-dev"
description = ""
authors = ["Jin Kim <jin.kim@seculayer.com>"]
license = "Apache-2.0"
include = ["conf"]

[tool.poetry.dependencies]
python = "^3.7, <3.11"
numpy = "^1.21"
requests = "^2.27.1"
pycmmn = { git = "https://ssdlc-bitbucket.seculayer.com:8443/scm/slaism/autoape-pycmmn.git", rev = "main" }

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.10.1"
pytest = "^7.1.1"
mypy = "^0.942"
hypothesis = "^6.43.3"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --failed-first -n auto"
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.pylint.format]
max-line-length = "120"
